fix(services): image layering behind other elements

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@
     border-radius: 999px; 
     appearance: none; 
     cursor: pointer;
+    z-index: 9;
 }
 .btn-outline { 
     background: transparent; 
@@ -238,9 +239,11 @@ body {
                 right: 52px; 
                 bottom: 82px;
                 width: 200px;
+                z-index: 0;
             }
             p { 
-                max-width: 295px;
+                max-width: 295px;   
+                z-index: 1;
             }
         }
         > :nth-child(2) { 
@@ -250,10 +253,14 @@ body {
             position: relative;
             grid-column: 1/ 3;
             background: white;
+            p { 
+                z-index: 1;
+            }
             img { 
                 position: absolute; 
                 right: 0; 
                 bottom: 0;
+                z-index: 0;
             }
            
         }
